add scFAIR compliance check access by URL/filename via API
